Currency exchange rate - but stuck at fixing currency coversion

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.bg-primary{
+    background-color: rgb(236, 236, 191) !important;
+}
 .prev-expense-btn {
     margin-top: 3rem;
    }
@@ -10,6 +13,8 @@
     margin-top: 3rem;
     margin-left: 140px;
    }
+
+
 
 
    
